<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CyberToolkit</string>

    <!-- ============ Navigation ============ -->
    <string name="tab_encoder">Encodeur</string>
    <string name="tab_crypto">Crypto</string>
    <string name="tab_sheets">Cheat Sheets</string>
    <string name="tab_payloads">Payloads</string>
    <string name="tab_settings">Paramètres</string>

    <string name="subtitle_encoder">ENCODE / DECODE</string>
    <string name="subtitle_crypto">HASHING &amp; CRYPTO</string>
    <string name="subtitle_sheets">COMMANDS REFERENCE</string>
    <string name="subtitle_payloads">TEST SCRIPTS GENERATOR</string>
    <string name="subtitle_settings">SYSTEM &amp; SECURITY</string>
...
